Fix scrollbar behavior in PiP window (#19)

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
  */
 
 body {
-  overflow: hidden !important;
+  overflow: auto !important;
 }
 
 ytd-miniplayer {
